--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 tokio-tungstenite = "0.26.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sqlx = { version = "0.8.3", features = [
-    "runtime-tokio-native-tls",
-    "postgres",
-] }
+sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 config = "0.15.6"
