--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 config = "0.15.6"
 thiserror = "2.0.11"
+dotenvy = "0.15"
 
 [dev-dependencies]
 # Для тестирования
