--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-API_KEY=your_api_key
-API_SECRET=your_api_secret
-REST_URL=https://poloniex.com/rest
-WS_URL=wss://poloniex.com/ws
+EXCHANGE=POLONIEX
+POLONIEX_REST_URL=https://poloniex.com/rest
+POLONIEX_WS_URL=wss://poloniex.com/ws
 DB_URL=db.sqlite
+## for extensibility, can add binance
+BINANCE_REST_URL=https://binance.com/rest
+BINANCE_WS_URL=wss://binance.com/ws
