--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
 EXCHANGE=POLONIEX
-POLONIEX_REST_URL=https://poloniex.com/rest
+POLONIEX_REST_URL_BASE=https://api.poloniex.com
+POLONIEX_REST_URL_ENDPOINT={base_url}/markets/{symbol}/candles?interval={timeframe}&limit=2
 POLONIEX_WS_URL=wss://poloniex.com/ws
 DB_URL=db.sqlite
 ## for extensibility, can add binance
 BINANCE_REST_URL=https://binance.com/rest
 BINANCE_WS_URL=wss://binance.com/ws
+
+SYMBOLS=BTC_USDT,TRX_USDT,ETH_USDT,DOGE_USDT,BCH_USDT
+TIMEFRAMES=MINUTE_1,MINUTE_15,HOUR_1,DAY_1
