--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ tracing-subscriber = "0.3"
 config = "0.15.6"
 thiserror = "2.0.11"
 dotenvy = "0.15"
+once_cell = "1.17"
+uuid = { version = "1.3", features = ["v4"] }
 
 [dev-dependencies]
 # Для тестирования
