--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EXCHANGE=POLONIEX
 POLONIEX_REST_URL_BASE=https://api.poloniex.com
-POLONIEX_REST_URL_ENDPOINT={base_url}/markets/{symbol}/candles?interval={timeframe}&limit=50
+POLONIEX_REST_URL_ENDPOINT={base_url}/markets/{symbol}/candles?interval={timeframe}&limit=3
 POLONIEX_WS_URL=wss://poloniex.com/ws
 DB_URL=db.sqlite
 ## for extensibility, can add binance
@@ -8,7 +8,9 @@ BINANCE_REST_URL=https://binance.com/rest
 BINANCE_WS_URL=wss://binance.com/ws
 
 # SYMBOLS=BTC_USDT
-# TIMEFRAMES=MINUTE_1
+# TIMEFRAMES=DAY_1
 
 SYMBOLS=BTC_USDT,TRX_USDT,ETH_USDT,DOGE_USDT,BCH_USDT
 TIMEFRAMES=MINUTE_1,MINUTE_15,HOUR_1,DAY_1
+
+
